--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,8 @@ dependencies = [
     "numpy>=2.4.2",
     "pygame>=2.6.1",
     "pytest>=9.0.2",
+    "setuptools>=82.0.0",
+    "tensorboard>=2.20.0",
+    "torch>=2.10.0",
     "tqdm>=4.67.3",
 ]
