--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "matplotlib>=3.10.8",
     "numpy>=2.4.2",
     "pygame>=2.6.1",
+    "pyyaml>=6.0",
     "pytest>=9.0.2",
     "tqdm>=4.67.3",
 ]
