--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "matplotlib>=3.10.8",
     "numpy>=2.4.2",
+    "pandas>=3.0.1",
     "pygame>=2.6.1",
     "pytest>=9.0.2",
     "setuptools>=82.0.0",
